<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/top_header"
        android:gravity="center"
        android:text="Registration"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="2" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="Email:" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_rectangle_shape"
            android:hint="@string/enter_your_email_id"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lt_phone_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/phone_no" />

        <EditText
            android:id="@+id/edt_phone_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_rectangle_shape"
            android:hint="@string/enter_your_phone_no"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/password" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_rectangle_shape"
            android:hint="@string/enter_your_password"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lt_confirm_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.5"
            android:singleLine="true"
            android:text="Confirm Password:" />

        <EditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/edit_text_rectangle_shape"
            android:ellipsize="end"
            android:hint="@string/re_enter_your_password"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lt_verification_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/verification_code" />

        <EditText
            android:id="@+id/edt_verification_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_rectangle_shape"
            android:ellipsize="end"
            android:hint="@string/verification_code"
            android:singleLine="true" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom|center_horizontal" >

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="Register" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_centerInParent="true"
            android:gravity="bottom|center_horizontal"
            android:layout_below="@+id/btn_register"
            android:singleLine="true"
            android:clickable="true"
            android:id="@+id/txtClickHere"
            android:text="@string/click_here_to_register_string" />
    </RelativeLayout>

</LinearLayout>